--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Borodinsky</title>
   <link rel="stylesheet" href="css/style.css">
-   
+</head>
 <body>
 <div class="overlay"></div>
   <header class="main-header clearfix">
@@ -13,8 +13,8 @@
       <ul class="main-nav__list">
         <li class="main-nav__item"><a href="#" class="main-nav__link">Информация</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__link">Новости</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Прайс-лист</a></li>
-        <li class="main-nav__item"><a href="#" class="main-nav__link">Магазин</a></li>
+        <li class="main-nav__item"><a href="price.html" class="main-nav__link">Прайс-лист</a></li>
+        <li class="main-nav__item"><a href="shop.html" class="main-nav__link">Магазин</a></li>
         <li class="main-nav__item"><a href="#" class="main-nav__link">Контакты</a></li>
       </ul>
       </nav>
@@ -148,6 +148,4 @@
     </div>
   </footer>
   <script src="js/script.js"></script>
-  
-</body>
 </html>
